@@ -3239,6 +3239,14 @@
             "rmondello"
          ]
       },
+      "Said Abou-Hallawa" : {
+         "emails" : [
+            "sabouhallawa@apple.com"
+         ],
+         "nicks" : [
+            "sabouhallawa"
+         ]
+      },
       "Tab Atkins" : {
          "emails" : [
             "tabatkins@google.com",
